# MMbook

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REVIEW_NOTES.md  REVIEW_REPORT.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: install-latest-mmbook.ps1
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/components/: SearchBar.svelte  SettingsPanel.svelte  TocPanel.svelte
src/lib/edit/: sourceBlock.test.ts  sourceBlock.ts
src/lib/focus/: scroll.test.ts  scroll.ts  segment.test.ts  segment.ts
src/lib/render/: images.test.ts  images.ts  markdown.test.ts  markdown.ts  markdown.worker.ts
src/lib/stores/: app.ts
src/lib/theme/: themes.ts
src/routes/: +page.svelte
website/: index.html  llms.txt  robots.txt  sitemap.xml  style.css
