[package]
name = "mmbook"
version = "0.1.0"
description = "A Markdown reader that respects your content"
authors = ["you"]
edition = "2021"

[lib]
name = "mmbook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
encoding_rs = "0.8"
